# GemwestGTK

./: README.md
icons/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  functions.c  functions.h  header.h  main.c  pixmaps_c.h  pixmaps_s.h
